fix main spacing

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ main {
     background-color: #f5f7fa;
 }
 .title {
-    padding: 3rem 0;
+    padding: 5rem 0 2rem 0;
 }
 
 .title p {
@@ -111,7 +111,7 @@ section {
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     text-align: center;
     width: 200px;
-    margin: 2rem;
+    margin: 2rem 1.5rem 6rem 1.5rem;
 }
 
 .card img {
